--- a/css/examples.css
+++ b/css/examples.css
@@ -390,7 +390,7 @@ p{
 	right:0px;
 	font-size:2em;
 	color:white;
-	font-family:'HammersmithOne', 'GillSans', san-serif;
+	font-family:'Arial', 'GillSans', san-serif;
 }
 
 .panelimage{
@@ -433,14 +433,14 @@ p{
 
 #copyright{
 	position:relative;
-	display:inline-block;
+	display:block;
 	padding:10px;
 	margin:5px;
 	font-family: 'GillSans', Arial, san-serif;
 }
 
 .printlinks li{
-	position:relative;
+	position:absolute;
 	margin:5px;
 
 }
