--- a/css/examples.css
+++ b/css/examples.css
@@ -389,7 +389,7 @@ p{
 	right:0px;
 	font-size:2em;
 	color:white;
-	font-family:'Arial', 'GillSans', san-serif;
+	font-family:'HammersmithOne', 'GillSans', san-serif;
 }
 
 .panelimage{
@@ -437,11 +437,7 @@ p{
 	font-family: 'GillSans', Arial, san-serif;
 }
 
-.printlinks li{
-	position:absolute;
-	margin:5px;
 
-}
 
 #portraitimage{
 	position:absolute;
