--- a/css/examples.css
+++ b/css/examples.css
@@ -156,7 +156,7 @@ body{
 	top:25%;
 	left:0%;
 	font-size: 3em;
-	font-family: 'HammersmithOne', 'arimoregular', san-serif;
+	font-family: 'GillSans', 'Arial', san-serif;
 	text-align: right;
 }
 
