--- a/css/examples.css
+++ b/css/examples.css
@@ -148,7 +148,7 @@ body{
 	height:58px;
 }
 
-.aboutheader h1{
+.aboutheader{
 	position:fixed;
 	display:inline-block;
 	margin:20px;
@@ -160,7 +160,7 @@ body{
 	text-align: right;
 }
 
-.subheader h1{
+h1.subheader{
 	position:relative;
 	color:white;
 	font-family: 'GillSans', 'arimoregular', san-serif;
@@ -183,7 +183,7 @@ h1{
 
 }
 
-.infoparagraph p{
+p.infoparagraph{
 	font-family: 'GillSans', 'arimoregular', san-serif;
 	position:relative;
 	top:300px;
@@ -194,7 +194,7 @@ h1{
 	color:white;
 }
 
-.description p{
+p.description{
 	font-family: 'GillSans', 'arimoregular', san-serif;
 	position:relative;
 	top:;
@@ -435,7 +435,7 @@ p{
 	text-align:left;
 	padding:10px;
 	
-	bottom:50px;
+	bottom:10px;
 	font-family: 'GillSans', Arial, san-serif;
 }
 
